--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,5 @@
     <string name="cadastrar">REGISTER</string>
     <string name="salario">Salary</string>
     <string name="cargo">Office</string>
+    <string name="titulo">Title</string>
 </resources>
